tests/highlevel/test-outputs/highlink-cpp.out
Status: OK

STEP 1

*gen_header*: Status: upstream => result_schema undefined
None

STEP 2

*gen_header*: Status: upstream => result_schema undefined
None

STEP 3

*executor*: Status: error
*** executor ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 204, in _execute
    prelim_callback, progress_callback
  File "/seamless/seamless/core/transformation.py", line 358, in _execute_local
    mod = await build_module_async(value)
  File "/seamless/seamless/core/build_module.py", line 174, in build_module_async
    full_module_name, mod = build_module(module_definition)
  File "/seamless/seamless/core/build_module.py", line 157, in build_module
    full_module_name, completed_checksum, completed_module_definition
  File "/seamless/seamless/core/build_module.py", line 117, in build_compiled_module
    raise BuildModuleError(stderr)
seamless.core.build_module.BuildModuleError: 
g++ -c main.cpp -O3 -ffast-math -march=native -fPIC -p -g -o main.o
******************** ERROR ********************
main.cpp:1:1: error: ‘lambda’ does not name a type
 lambda arr, fac, offset: 42
 ^~~~~~

******************** /ERROR ********************

*** /executor ***


/*
The following C header has been auto-generated from the transformer schema
It will be used to generate bindings, but it will not be automatically
added to the compiled transformer code.

If your transformer code is written in C/C++, you may do so yourself.
For C, you may need to include "stdint.h" and "stdbool.h".
If your transform() function is written in C++, don't forget to add 'extern "C" '
*/

typedef struct ArrStruct {
  const double *data;
  unsigned int shape[1];
  unsigned int strides[1];
} ArrStruct;

int transform(const ArrStruct* arr, int fac, int offset, int *result);
